--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This website helps you to choose name of your pet or even your child.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/server.js",
+    "assets": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
